feat: filtrar os animes e deixar em ordem

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,8 +1,8 @@
 .banner {
     width: 100%;
     height: 20rem;
-    background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-repeat: no-repeat;
+    background-position: cover;
     padding-top: 4rem;
 }
