--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .footer{
-    position: absolute;
+    position: static;
     display: flex;
     align-items: center;
     justify-content: center;
