--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,7 +24,7 @@
     margin-top: 1rem;
 }
 
-.menu a{
+.menu Link{
     text-decoration: none;
     font-size: 1.3rem;
     font-weight: 500;
@@ -33,6 +33,6 @@
     cursor: pointer;
 }
 
-.menu a:hover {
+.menu Link:hover {
     color: #b71c1c;
 }
