--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,8 +1,9 @@
 .banner {
     width: 100%;
-    height: 20rem;
+    height: 25rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: cover;
     padding-top: 4rem;
+    border-bottom: 2px #888;
 }
