--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,10 +5,13 @@
     justify-content: center;
     color: #fff;
     bottom: 0;
+    position: fixed;
     background-color: #000;    
     border-top: 2px solid #f44336;
+    z-index: 1000;
 }
 .footer h2{
+    background-color: #000;
     font-size: 1rem;
     font-weight: 500;
 }
