--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,29 +10,36 @@
     background-color: #000000;
     width: 100%;
     height: 4rem;
+    z-index: 1001;
 }
 
-.header span{
+.header .logo {
+    background-color: #000000;
     color: #b71c1c;
     font-size: 2.5rem;
-    margin-top: 0.3rem;
     margin-left: 1.5rem;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
 }
 
 .menu {
+    background-color: #000000;
+    display: flex;
+    align-items: center;
     margin-left: 70rem;
-    margin-top: 1rem;
 }
 
-.menu Link{
+.menu .rota {
+    background-color: #000000;    
     text-decoration: none;
-    font-size: 1.3rem;
-    font-weight: 500;
+    margin-right: 25px;
+    font-weight: 400;
     color: #fff;
-    padding: 0.9rem;
+    gap: 10px;
     cursor: pointer;
 }
 
-.menu Link:hover {
+.menu .rota:hover {
     color: #b71c1c;
 }
